--- a/my_website/spicy memios.html
+++ b/my_website/spicy memios.html
@@ -7,6 +7,7 @@
 	  <body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
+    <a href="spicy memios.html">Spicy memios</a>
     <h1>In the absence of god, the spiciest memes will take over</h1>
     <img src="images/gangsta gandalf.jpg" height="250">
     <br>
