--- a/my_website/index.html
+++ b/my_website/index.html
@@ -7,7 +7,8 @@
   <body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
-    <h1>This is my test Home Page!</h1>
+    <a href="spicy_memios.html">Spicy Memios</a>
+    <h1>i have hepatitis c!</h1>
     <img src="images/home.jpg" height="250">
   </body>
 </html>
