--- a/my_website/spicy_memios.html
+++ b/my_website/spicy_memios.html
@@ -8,12 +8,16 @@
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="spicy memios.html">Spicy memios</a>
-    <h1>In the absence of god, the spiciest memes will take over</h1>
+    <h1>Capitalism is not efficient; Communism is the only true form of government and Stalin is our true lord and savior. In a society where everyone is truely free and equal, what else can we rely on other than an all powerful dictator? The public is not informed to make decisions independantly from a government body, it would only result in anarchy.</h1>
     <img src="images/gangsta gandalf.jpg" height="250">
     <br>
-      <img src="images/chalktalk vs chalktastic.png" height="250">
+      <img src="images/chalktalk vs chalktastic.png" height="300">
     <br>
-      <img src="images/i am come to harvest your soul.png" height="250">
+      <img src="images/i am come to harvest your soul.png" height="500">
+    <br>
+      <img src="images/tyler meme.jpg" height="400">
+    <br>
+      <img src="images/brophy pepe.png" height="250">
     </a>
 	  </body>
 	</html>
