Scratch project added

--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -15,10 +15,7 @@
     </a>
     
     <h1> Day 2 </h1>
-    <a href="https://scratch.mit.edu/projects/172077867/" Scratch Project Cancer
-    
-    </a>
-    </a>
+    <a href="https://scratch.mit.edu/projects/172077867/">Scratch Project Cancer</a>
     <br>
 	  </body>
 	</html>
