--- a/my_website/spicy_memios.html
+++ b/my_website/spicy_memios.html
@@ -8,10 +8,10 @@
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="spicy memios.html">Spicy Memios</a>
-    <h1>Capitalism is not efficient; Communism is the only true form of government and Stalin is our true lord and savior. In a society where everyone is truly free and equal, what else can we rely on other than an all powerful dictator? The public is not informed to make decisions independantly from a government body, it would only result in anarchy.</h1>
+    <h1>By what means is this object attainable? Evidently by one of two only. Either the existence of the same passion or interest in a majority at the same time must be prevented, or the majority, having such coexistent passion or interest, must be rendered, by their number and local situation, unable to concert and carry into effect schemes of oppression. If the impulse and the opportunity be suffered to coincide, we well know that neither moral nor religious motives can be relied on as an adequate control. They are not found to be such on the injustice and violence of individuals, and lose their efficacy in proportion to the number combined together, that is, in proportion as their efficacy becomes needful.</h1>
     <img src="images/gangsta gandalf.jpg" height="250">
       <img src="images/chalktalk vs chalktastic.png" height="300">
-      <img src="images/i am come to harvest your soul.png" height="500">
+      <img src="images/i am come to harvest your soul.png" height="400">
     <br>
       <img src="images/tyler meme.jpg" height="400">
       <img src="images/brophy pepe.png" height="250">
