--- a/my_website/index.html
+++ b/my_website/index.html
@@ -9,8 +9,8 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="spicy_memios.html">Spicy Memios</a>
     <h1>i have hepatitis c!</h1>
-    <img src="images/hey b0ss.jpg" height="600">
-    <img src="images/gandalf.jpg" height="600">
+    <img src="images/minecraft.jpg" height="800">
+    <img src="images/school.png" height="600">
     <br>
   </body>
 </html>
