--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -7,7 +7,7 @@
 	  <body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
-    <h1>This is my Portfolio Page!</h1>
+    <h1>welcum to my portfolio ;)</h1>
     <img src="images/portfolio.jpg" height="250">
     <br>
     <a target="_blank" href="https://scratch.mit.edu">
@@ -16,6 +16,10 @@
     
     <h1> Day 2 </h1>
     <a href="https://scratch.mit.edu/projects/172077867/">Scratch Project Cancer</a>
+    <br>
+    <h1> Day something idk </h1>
+    <img src="images/1.png" height="250">
+    <a</a>
     <br>
 	  </body>
 	</html>
